# Legal-Assistant-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: agent_test.py  legal_assistant.py
observability/: langfuse_client.py  langfuse_tracing.py  logging.py
tools/rag_docs/: legal_rag_tool.py  rag.ipynb  rag_load_data.py  rag_load_metadata.py  rag_query_engine.py  rag_retriver.py  rag_test.py
