[project]
name = "rag-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langfuse>=2.40.0",
    "langgraph>=0.2.0",
    "llama-index>=0.10.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-vector-stores-weaviate>=0.1.0",
    "pydantic>=2.0.0,<3.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "weaviate-client>=4.0.0,<5.0.0",
]
